--- a/public/style.css
+++ b/public/style.css
@@ -294,8 +294,65 @@
 #contact
 {
 	width: 100%;
-	height: 450px;
+	height: 500px;
 	background-image: url('images/map.png');
 	background-size: cover;
 	background-repeat: no-repeat;
+}
+
+#box_mail
+{
+	padding: 10px;
+	width: 50%;
+	background-color: white;
+}
+
+.form_mail
+{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+}
+
+.box_mail-left,
+.box_mail-right
+{
+	width: 50%;
+}
+
+.btn_send-mail
+{
+	padding: 5px 20px 5px 20px;
+	border: 0;
+	outline: 0;
+	color: white;
+	background-color: var(--secondary);
+}
+
+.box_mail-left i
+{
+	position: relative;
+	left: 26px;
+	font-size: 17px;
+}
+
+ .box_mail-left input
+ {
+ 	padding: 7px 15px 4px 30px;
+ 	border-radius: 20px;
+ 	border:1px solid lightgray;
+ 	width: 250px;
+ 	font-size: 16px;
+ }
+
+ .box_mail-left textarea 
+ {
+ 	width: 250px;
+ 	padding: 10px;
+ 	font-size: 16px;
+ }
+
+.btn_send-mail:hover
+{
+	background-color: var(--twitter);
 }
