--- a/public/style.css
+++ b/public/style.css
@@ -45,16 +45,24 @@
 	right: 0;
 	z-index: 1;
 }
-
-#menu
+#space_menu
 {
-	display: flex;
-	flex-direction: row;
+	position: relative;
 	width: 100%;
 	height: 72px;
 	padding: 20px 0 5px 0;
+	z-index: 0;
+}
+#menu
+{
+	top: 0;
+	position: fixed;
+	display: flex;
+	flex-direction: row;
+	width: 105%;
+	height: 72px;
+	padding: 20px 0 5px 0;
 	color: white;
-	position: relative;
 	z-index: 2;
 }
 
@@ -293,6 +301,8 @@
 /*CONTACT */
 #contact
 {
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 500px;
 	background-image: url('images/map.png');
