--- a/public/style.css
+++ b/public/style.css
@@ -71,17 +71,19 @@
 {
 	width: 50%;
 }
-
+#menu #menu #menu_left ul,
 #menu #menu_right ul
 {
 	list-style: none;
 }
 
+#menu_left ul li,
 #menu_right ul li
 {
 	display: inline-block;
 }
 
+#menu_left ul li a,
 #menu_right ul li a
 {
 	padding: 5px 15px 5px 15px;
@@ -90,6 +92,12 @@
 	text-decoration: none;
 	display: block;
 	cursor: pointer;
+}
+
+#menu_left ul li a
+{
+	font-size: 24px;
+	padding: 0 15px 5px 100px;
 }
 
 #menu_right ul li a:hover:after
@@ -116,7 +124,7 @@
 }
 #menu_right ul li:nth-child(3) a:hover:after
 {
-	content:"PORTFOLIO";
+	content:"EDUCATION";
 }
 #menu_right ul li:nth-child(4) a:hover:after
 {
@@ -130,14 +138,25 @@
 #info
 {
 	position: relative;
-	
 	z-index: 2;
+	text-align: center;
 }
 #avatar
 {
-	width: 160px;
-	height: 160px;
+	position: absolute;
+	z-index: 2;
+	width: 150px;
+	height: 150px;
 	border-radius: 360px;
+	transition: all .3s ease-out;
+	cursor: pointer;
+}
+
+#avatar:hover
+{
+	width: 165px;
+	height: 165px;
+	transition: all .3s ease-out;
 }
 
 #info h2,
@@ -178,7 +197,7 @@
 #social_media
 {
 	position: relative;
-	top: 23%;
+	top: 17%;
 	z-index: 2;
 }
 
@@ -366,3 +385,71 @@
 {
 	background-color: var(--twitter);
 }
+
+
+
+
+/* animation */
+#frame_avatar
+{
+	position: relative;
+	display: inline-flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 170px;
+	height: 170px;
+	border-radius: 360px;
+	z-index: 1;
+}
+#frame_avatar::after
+{
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 170px;
+	height: 170px;
+	border-radius: 360px;
+  	animation-name: stretch;
+    animation-duration: 2.0s;
+	animation-timing-function: ease;
+	animation-direction: alternate;
+	animation-iteration-count: infinite;
+	animation-play-state: running;
+
+	-webkit-animation-duration: 1.5s;
+    -webkit-animation-timing-function: ease;
+    -webkit-animation-direction: normal;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-play-state: running;
+
+}
+ @keyframes stretch {
+            0% {
+               transform: scale(.5);
+               background-color: var(--secondary);
+               border-radius: 100%;
+               opacity: 90%;
+            }
+  
+            50% {
+                background-color: var(--secondary);
+               border-radius: 100%;
+               opacity: 60%;
+            }
+
+             75% {
+                background-color: var(--secondary);
+               border-radius: 100%;
+               opacity: 40%;
+            }
+  
+            100% {
+                transform: scale(1.0);
+                background-color: var(--secondary);
+               border-radius: 100%;
+               opacity: 0%;
+            }
+        }
