--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 *,.container-fluid{
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+   -webkit-box-sizing: border-box;
 }
 
  :root {
@@ -55,7 +58,6 @@
 }
 #menu
 {
-	top: 0;
 	position: fixed;
 	display: flex;
 	flex-direction: row;
@@ -64,6 +66,14 @@
 	padding: 20px 0 5px 0;
 	color: white;
 	z-index: 2;
+}
+#active_menu
+{
+	position: absolute;
+}
+#menu #menu_right #div_bar-menu
+{
+	display:none;
 }
 
 #menu #menu_left,
@@ -135,6 +145,8 @@
 	content:"CONTACT";
 }
 
+
+
 #info
 {
 	position: relative;
@@ -177,27 +189,27 @@
 
 #info #btn_download
 {
-	padding: 5px 15px 5px 15px;
+	padding: 5px 40px 5px 40px;
 	color: white;
 	border-radius: 5px;
 	text-align: center;
 	border: 0;
 	outline: none;
-	background-color: var(--darkgreen);
-	transition: 0.5s;
+	background-color: var(--secondary);
+	transition: 0.3s;
 	font-size: 18px;
 }
 
 #info #btn_download:hover
 {
-	background-color: var(--lightgreen);
-	transition: 0.5s;
+	background-color: var(--twitter);
+	transition: 0.3s;
 }
 
 #social_media
 {
 	position: relative;
-	top: 17%;
+	top: 20%;
 	z-index: 2;
 }
 
@@ -453,3 +465,280 @@
                opacity: 0%;
             }
         }
+
+
+
+ /* REPONSIVE */
+ /* MoBile */
+ @media only screen and (min-width:250px) and (max-width: 600px)
+ {
+ 	#header
+ 	{
+ 		height: 550px;
+ 		width: 100%;
+ 	}
+ 	#menu_left
+	{
+		display: none;
+	}
+
+	#menu #menu_right #bar_menu
+	{
+		font-size: 28px;
+	}
+	#menu #menu_right #div_bar-menu
+	{
+		display: block;
+		transition: 0.7s;
+		position: relative;
+		top: -10px;
+		left: 10px;
+	}
+	#menu #menu_right #div_bar-menu .border_bar
+	{
+		width: 40px;
+		margin-top: 5px;
+		border-radius: 20px;
+		height: 5px;
+		background-color: white;
+		transition: 0.5s;
+	}
+
+	#menu_right #list_menu
+	{
+		background: linear-gradient(to bottom, #4b6cb7, #182848);
+		display: block;
+ 		position: fixed;
+ 		width: 250px;
+		top: 0;
+ 		bottom: 0;
+ 		right: -340px;
+ 		z-index: 2;
+ 		transition: 0.7s;
+	}
+ 	#menu #menu_right ul
+ 	{
+ 		list-style: normal;
+ 		padding: 0;
+ 	}
+
+ 	#menu #menu_right ul li
+ 	{
+ 		display: block;
+ 		line-height: 3rem;
+ 		font-size: 20px;
+ 		width: 100%;
+ 	}
+ 	#menu #menu_right ul li a
+ 	{
+ 		width: 100%;
+ 		text-align: left;
+ 	}
+ 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(1)
+ 	{
+		transform: rotate(50deg);
+		position: absolute;
+		transition: 0.5s;
+ 	}
+ 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(2)
+ 	{
+		opacity: 0;
+		transition: 0.2s;
+ 	}
+ 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(3)
+ 	{
+		transform: rotate(-50deg);
+		position: absolute;
+		transition: 0.5s;
+ 	}
+ 	#active_menu:checked ~ #list_menu
+	{
+		right: 0px;
+		transition: 0.7s;
+	}
+
+ /*	#menu #menu_right ul
+ 	{
+ 		display:none;
+ 	}
+*/
+ 	#social_media
+	{
+		position: relative;
+		z-index: 2;
+	}
+
+ 	.box
+ 	{
+ 		width: 90%;
+ 	}
+
+ 	#info_about .info_item
+ 	{
+ 		display: block;
+ 	}
+ 	.info_item .info_item-title
+	{
+		width: 100%;
+		font-weight: bold;
+	}
+	.info_item .info_item-content
+	{
+		width: 100%;
+	}
+
+	#professional_skills .skill_left,
+	#professional_skills .skill_right
+	{
+		width: 100%;
+		display: block;
+	}
+
+	.skill_item .skill_item-title
+	{
+		width: 100%;
+		font-weight: bold;
+	}
+	.skill_item .skill_item-content
+	{
+		width: 100%;
+	}
+
+	.exp_item,
+	.edu_item
+	{
+		display: block;
+	}
+
+	.exp_item .exp_left,
+	.edu_item .edu_left
+	{
+		text-align: center;
+		width: 100%;
+	}
+
+	.exp_item .exp_right,
+	.edu_item .edu_right
+	{
+		width: 100%;
+	}
+
+	#contact
+	{
+		height:800px ;
+	}
+
+	#box_mail
+	{
+		width: 90%;
+	}
+
+	.form_mail
+	{
+		width: 100%;
+		display:block;
+	}
+
+	.box_mail-left,
+	.box_mail-right
+	{
+		width: 100%;
+	}
+
+	.box_mail-right
+	{
+		margin-top: 3rem;
+		padding-left: 20px;
+	}
+
+	.box_mail-left input,
+	.box_mail-left textarea
+	{
+		width: 90%;
+	}
+
+	.box_mail-left textarea
+	{
+		border-top: 0;
+		border-left: 0;
+		border-right: 0;
+	}
+
+	.btn_send-mail
+	{
+		width: 30%;
+	}
+
+ }
+
+/* IPAD */
+ @media only screen and (min-width: 601px) and (max-width: 800px)
+ {
+ 	#menu #menu_right ul
+ 	{
+ 		display:none;
+ 	}
+
+	#menu #menu_left
+	{
+		width: 20%;
+		padding: 0;
+		margin: 0;
+	}
+	#menu_left ul li a
+	{
+		padding: 0;
+	}
+	#menu #menu_right
+	{
+		width: 80%;
+	}
+
+	#box_mail
+	{
+		width: 95%;
+	}
+
+	#contact
+	{
+		width: 100%;
+		height: 500px;
+	}
+
+	.box_mail-left textarea
+	{
+		border-top: 0;
+		border-left: 0;
+		border-right: 0;
+	}
+ }
+
+  @media only screen and (min-width: 801px) and (max-width: 1100px)
+  {
+  	#menu #menu_left
+  	{
+  		width: 40%;
+  	}
+	#menu #menu_right
+	{
+		width: 60%;
+	}
+
+	#box_mail
+	{
+		width: 90%;
+	}
+
+	#contact
+	{
+		width: 100%;
+		height: 500px;
+	}
+
+	.box_mail-left textarea
+	{
+		border-top: 0;
+		border-left: 0;
+		border-right: 0;
+	}
+  }
