--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,21 @@ html,body
    
  }
 
+#preload
+{
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: white;
+}
+
+
 #header
 {
 	text-align: center;
